--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "tic-tac-toe-minimax-engine": "^1.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
